# pixelforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
pixelforge/: __init__.py  cli.py
pixelforge/core/: __init__.py  image.py
pixelforge/core/formats/: __init__.py  bmp.py  png.py  ppm.py
pixelforge/filters/: __init__.py  basic.py  color.py  convolution.py
pixelforge/processors/: __init__.py  batch.py  comparison.py  metadata.py  watermark.py
pixelforge/utils/: __init__.py  colors.py  progress.py  text.py
