[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pixelforge"
version = "1.0.0"
description = "轻量级跨平台图像智能处理CLI引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PixelForge Team"}
]
keywords = ["image", "processing", "cli", "png", "bmp", "ppm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.scripts]
pixelforge = "pixelforge.cli:main"

[tool.setuptools.packages.find]
include = ["pixelforge*"]
